[project]
name = "comfyui-domemaster-outpaint"
description = "Render Burgstall VR-Outpaint square hemispheres and full equirectangular panoramas as fulldome domemasters in ComfyUI."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Burgstall-labs/ComfyUI-Domemaster-Outpaint"

[tool.comfy]
DisplayName = "ComfyUI-Domemaster-Outpaint"
PublisherId = "burgstall-labs"
